Compilateur/parser.output
Terminaux inutilisés dans la grammaire

    tERROR


Règles inutiles dans l'analyseur à cause de conflits

   29 $@1: %empty


État 91 conflits: 1 décalage/réduction


Grammaire

    0 $accept: Program $end

    1 Program: Function tVOID tMAIN tLPAR tVOID tRPAR Body

    2 Function: tINT tID tLPAR ArgList tRPAR Body

    3 ArgList: ArgListNext
    4        | %empty

    5 ArgListNext: tINT tID ArgListNextNext
    6            | Arith_Expr ArgListNextNext

    7 ArgListNextNext: tCOMMA tINT tID ArgListNextNext
    8                | tCOMMA Arith_Expr ArgListNextNext
    9                | %empty

   10 Body: tLBRACE Content tRBRACE

   11 Content: Instruction Content
   12        | %empty

   13 Instruction: Constantes
   14            | Declaration
   15            | Affectation
   16            | LoopIF
   17            | LoopWHILE
   18            | Print
   19            | Return
   20            | tCOMMENT

   21 Constantes: tCONST Dec tSEMI

   22 Dec: tID tCOMMA DecNext
   23    | tID
   24    | tID tASSIGN Arith_Expr

   25 Declaration: tINT DecNext tSEMI

   26 DecNext: tID tCOMMA DecNext
   27        | tID
   28        | tID tASSIGN Arith_Expr

   29 $@1: %empty

   30 DecNext: tID tASSIGN $@1 tID tLPAR ArgList tRPAR

   31 Affectation: tID tASSIGN Arith_Expr tSEMI

   32 $@2: %empty

   33 $@3: %empty

   34 LoopIF: tIF tLPAR Condition tRPAR $@2 Body $@3 IfNext

   35 IfNext: tELSE Body
   36       | %empty

   37 LoopWHILE: tWHILE tLPAR Condition tRPAR Body

   38 Arith_Expr: Factor
   39           | Arith_Expr tADD Factor
   40           | Arith_Expr tSUB Factor

   41 Factor: Term
   42       | Factor tMUL Term
   43       | Factor tDIV Term

   44 Term: tNB
   45     | tID
   46     | tLPAR Arith_Expr tRPAR

   47 Condition: Bool_Expr
   48          | Bool_Expr tAND Bool_Expr
   49          | Bool_Expr tNOT Bool_Expr
   50          | Bool_Expr tOR Bool_Expr

   51 Bool_Expr: tTRUE
   52          | tFALSE
   53          | Arith_Expr tLT Arith_Expr
   54          | Arith_Expr tGT Arith_Expr
   55          | Arith_Expr tGE Arith_Expr
   56          | Arith_Expr tLE Arith_Expr
   57          | Arith_Expr tNE Arith_Expr
   58          | Arith_Expr tEQ Arith_Expr

   59 Print: tPRINTF tLPAR Expr tRPAR tSEMI

   60 Return: tRETURN Expr tSEMI

   61 Expr: Arith_Expr
   62     | Bool_Expr


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMAIN (258) 1
    tPRINTF (259) 59
    tRETURN (260) 60
    tELSE (261) 35
    tWHILE (262) 37
    tVOID (263) 1
    tTRUE (264) 51
    tFALSE (265) 52
    tLPAR (266) 1 2 30 34 37 46 59
    tRPAR (267) 1 2 30 34 37 46 59
    tLBRACE (268) 10
    tRBRACE (269) 10
    tCONST (270) 21
    tINT (271) 2 5 7 25
    tCOMMA (272) 7 8 22 26
    tSEMI (273) 21 25 31 59 60
    tADD (274) 39
    tSUB (275) 40
    tMUL (276) 42
    tDIV (277) 43
    tEQ (278) 58
    tLT (279) 53
    tGT (280) 54
    tNE (281) 57
    tAND (282) 48
    tOR (283) 50
    tGE (284) 55
    tLE (285) 56
    tASSIGN (286) 24 28 30 31
    tNOT (287) 49
    tCOMMENT (288) 20
    tERROR (289)
    tNB <nb> (290) 44
    tIF <nb> (291) 34
    tID <str> (292) 2 5 7 22 23 24 26 27 28 30 31 45


Non-terminaux, suivis des règles où ils apparaissent

    $accept (38)
        à gauche: 0
    Program (39)
        à gauche: 1
        à droite: 0
    Function (40)
        à gauche: 2
        à droite: 1
    ArgList (41)
        à gauche: 3 4
        à droite: 2 30
    ArgListNext (42)
        à gauche: 5 6
        à droite: 3
    ArgListNextNext (43)
        à gauche: 7 8 9
        à droite: 5 6 7 8
    Body (44)
        à gauche: 10
        à droite: 1 2 34 35 37
    Content (45)
        à gauche: 11 12
        à droite: 10 11
    Instruction (46)
        à gauche: 13 14 15 16 17 18 19 20
        à droite: 11
    Constantes (47)
        à gauche: 21
        à droite: 13
    Dec (48)
        à gauche: 22 23 24
        à droite: 21
    Declaration (49)
        à gauche: 25
        à droite: 14
    DecNext (50)
        à gauche: 26 27 28 30
        à droite: 22 25 26
    $@1 (51)
        à gauche: 29
        à droite: 30
    Affectation (52)
        à gauche: 31
        à droite: 15
    LoopIF (53)
        à gauche: 34
        à droite: 16
    $@2 (54)
        à gauche: 32
        à droite: 34
    $@3 (55)
        à gauche: 33
        à droite: 34
    IfNext (56)
        à gauche: 35 36
        à droite: 34
    LoopWHILE (57)
        à gauche: 37
        à droite: 17
    Arith_Expr (58)
        à gauche: 38 39 40
        à droite: 6 8 24 28 31 39 40 46 53 54 55 56 57 58 61
    Factor (59)
        à gauche: 41 42 43
        à droite: 38 39 40 42 43
    Term (60)
        à gauche: 44 45 46
        à droite: 41 42 43
    Condition (61)
        à gauche: 47 48 49 50
        à droite: 34 37
    Bool_Expr (62)
        à gauche: 51 52 53 54 55 56 57 58
        à droite: 47 48 49 50 62
    Print (63)
        à gauche: 59
        à droite: 18
    Return (64)
        à gauche: 60
        à droite: 19
    Expr (65)
        à gauche: 61 62
        à droite: 59 60


État 0

    0 $accept: . Program $end

    tINT  décalage et aller à l'état 1

    Program   aller à l'état 2
    Function  aller à l'état 3


État 1

    2 Function: tINT . tID tLPAR ArgList tRPAR Body

    tID  décalage et aller à l'état 4


État 2

    0 $accept: Program . $end

    $end  décalage et aller à l'état 5


État 3

    1 Program: Function . tVOID tMAIN tLPAR tVOID tRPAR Body

    tVOID  décalage et aller à l'état 6


État 4

    2 Function: tINT tID . tLPAR ArgList tRPAR Body

    tLPAR  décalage et aller à l'état 7


État 5

    0 $accept: Program $end .

    $défaut  accepter


État 6

    1 Program: Function tVOID . tMAIN tLPAR tVOID tRPAR Body

    tMAIN  décalage et aller à l'état 8


État 7

    2 Function: tINT tID tLPAR . ArgList tRPAR Body

    tLPAR  décalage et aller à l'état 9
    tINT   décalage et aller à l'état 10
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 4 (ArgList)

    ArgList      aller à l'état 13
    ArgListNext  aller à l'état 14
    Arith_Expr   aller à l'état 15
    Factor       aller à l'état 16
    Term         aller à l'état 17


État 8

    1 Program: Function tVOID tMAIN . tLPAR tVOID tRPAR Body

    tLPAR  décalage et aller à l'état 18


État 9

   46 Term: tLPAR . Arith_Expr tRPAR

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 19
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 10

    5 ArgListNext: tINT . tID ArgListNextNext

    tID  décalage et aller à l'état 20


État 11

   44 Term: tNB .

    $défaut  réduction par utilisation de la règle 44 (Term)


État 12

   45 Term: tID .

    $défaut  réduction par utilisation de la règle 45 (Term)


État 13

    2 Function: tINT tID tLPAR ArgList . tRPAR Body

    tRPAR  décalage et aller à l'état 21


État 14

    3 ArgList: ArgListNext .

    $défaut  réduction par utilisation de la règle 3 (ArgList)


État 15

    6 ArgListNext: Arith_Expr . ArgListNextNext
   39 Arith_Expr: Arith_Expr . tADD Factor
   40           | Arith_Expr . tSUB Factor

    tCOMMA  décalage et aller à l'état 22
    tADD    décalage et aller à l'état 23
    tSUB    décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 25


État 16

   38 Arith_Expr: Factor .
   42 Factor: Factor . tMUL Term
   43       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 26
    tDIV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 38 (Arith_Expr)


État 17

   41 Factor: Term .

    $défaut  réduction par utilisation de la règle 41 (Factor)


État 18

    1 Program: Function tVOID tMAIN tLPAR . tVOID tRPAR Body

    tVOID  décalage et aller à l'état 28


État 19

   39 Arith_Expr: Arith_Expr . tADD Factor
   40           | Arith_Expr . tSUB Factor
   46 Term: tLPAR Arith_Expr . tRPAR

    tRPAR  décalage et aller à l'état 29
    tADD   décalage et aller à l'état 23
    tSUB   décalage et aller à l'état 24


État 20

    5 ArgListNext: tINT tID . ArgListNextNext

    tCOMMA  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 30


État 21

    2 Function: tINT tID tLPAR ArgList tRPAR . Body

    tLBRACE  décalage et aller à l'état 31

    Body  aller à l'état 32


État 22

    7 ArgListNextNext: tCOMMA . tINT tID ArgListNextNext
    8                | tCOMMA . Arith_Expr ArgListNextNext

    tLPAR  décalage et aller à l'état 9
    tINT   décalage et aller à l'état 33
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 34
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 23

   39 Arith_Expr: Arith_Expr tADD . Factor

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Factor  aller à l'état 35
    Term    aller à l'état 17


État 24

   40 Arith_Expr: Arith_Expr tSUB . Factor

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Factor  aller à l'état 36
    Term    aller à l'état 17


État 25

    6 ArgListNext: Arith_Expr ArgListNextNext .

    $défaut  réduction par utilisation de la règle 6 (ArgListNext)


État 26

   42 Factor: Factor tMUL . Term

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Term  aller à l'état 37


État 27

   43 Factor: Factor tDIV . Term

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Term  aller à l'état 38


État 28

    1 Program: Function tVOID tMAIN tLPAR tVOID . tRPAR Body

    tRPAR  décalage et aller à l'état 39


État 29

   46 Term: tLPAR Arith_Expr tRPAR .

    $défaut  réduction par utilisation de la règle 46 (Term)


État 30

    5 ArgListNext: tINT tID ArgListNextNext .

    $défaut  réduction par utilisation de la règle 5 (ArgListNext)


État 31

   10 Body: tLBRACE . Content tRBRACE

    tPRINTF   décalage et aller à l'état 40
    tRETURN   décalage et aller à l'état 41
    tWHILE    décalage et aller à l'état 42
    tCONST    décalage et aller à l'état 43
    tINT      décalage et aller à l'état 44
    tCOMMENT  décalage et aller à l'état 45
    tIF       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 12 (Content)

    Content      aller à l'état 48
    Instruction  aller à l'état 49
    Constantes   aller à l'état 50
    Declaration  aller à l'état 51
    Affectation  aller à l'état 52
    LoopIF       aller à l'état 53
    LoopWHILE    aller à l'état 54
    Print        aller à l'état 55
    Return       aller à l'état 56


État 32

    2 Function: tINT tID tLPAR ArgList tRPAR Body .

    $défaut  réduction par utilisation de la règle 2 (Function)


État 33

    7 ArgListNextNext: tCOMMA tINT . tID ArgListNextNext

    tID  décalage et aller à l'état 57


État 34

    8 ArgListNextNext: tCOMMA Arith_Expr . ArgListNextNext
   39 Arith_Expr: Arith_Expr . tADD Factor
   40           | Arith_Expr . tSUB Factor

    tCOMMA  décalage et aller à l'état 22
    tADD    décalage et aller à l'état 23
    tSUB    décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 58


État 35

   39 Arith_Expr: Arith_Expr tADD Factor .
   42 Factor: Factor . tMUL Term
   43       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 26
    tDIV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 39 (Arith_Expr)


État 36

   40 Arith_Expr: Arith_Expr tSUB Factor .
   42 Factor: Factor . tMUL Term
   43       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 26
    tDIV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 40 (Arith_Expr)


État 37

   42 Factor: Factor tMUL Term .

    $défaut  réduction par utilisation de la règle 42 (Factor)


État 38

   43 Factor: Factor tDIV Term .

    $défaut  réduction par utilisation de la règle 43 (Factor)


État 39

    1 Program: Function tVOID tMAIN tLPAR tVOID tRPAR . Body

    tLBRACE  décalage et aller à l'état 31

    Body  aller à l'état 59


État 40

   59 Print: tPRINTF . tLPAR Expr tRPAR tSEMI

    tLPAR  décalage et aller à l'état 60


État 41

   60 Return: tRETURN . Expr tSEMI

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 63
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Bool_Expr   aller à l'état 64
    Expr        aller à l'état 65


État 42

   37 LoopWHILE: tWHILE . tLPAR Condition tRPAR Body

    tLPAR  décalage et aller à l'état 66


État 43

   21 Constantes: tCONST . Dec tSEMI

    tID  décalage et aller à l'état 67

    Dec  aller à l'état 68


État 44

   25 Declaration: tINT . DecNext tSEMI

    tID  décalage et aller à l'état 69

    DecNext  aller à l'état 70


État 45

   20 Instruction: tCOMMENT .

    $défaut  réduction par utilisation de la règle 20 (Instruction)


État 46

   34 LoopIF: tIF . tLPAR Condition tRPAR $@2 Body $@3 IfNext

    tLPAR  décalage et aller à l'état 71


État 47

   31 Affectation: tID . tASSIGN Arith_Expr tSEMI

    tASSIGN  décalage et aller à l'état 72


État 48

   10 Body: tLBRACE Content . tRBRACE

    tRBRACE  décalage et aller à l'état 73


État 49

   11 Content: Instruction . Content

    tPRINTF   décalage et aller à l'état 40
    tRETURN   décalage et aller à l'état 41
    tWHILE    décalage et aller à l'état 42
    tCONST    décalage et aller à l'état 43
    tINT      décalage et aller à l'état 44
    tCOMMENT  décalage et aller à l'état 45
    tIF       décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 12 (Content)

    Content      aller à l'état 74
    Instruction  aller à l'état 49
    Constantes   aller à l'état 50
    Declaration  aller à l'état 51
    Affectation  aller à l'état 52
    LoopIF       aller à l'état 53
    LoopWHILE    aller à l'état 54
    Print        aller à l'état 55
    Return       aller à l'état 56


État 50

   13 Instruction: Constantes .

    $défaut  réduction par utilisation de la règle 13 (Instruction)


État 51

   14 Instruction: Declaration .

    $défaut  réduction par utilisation de la règle 14 (Instruction)


État 52

   15 Instruction: Affectation .

    $défaut  réduction par utilisation de la règle 15 (Instruction)


État 53

   16 Instruction: LoopIF .

    $défaut  réduction par utilisation de la règle 16 (Instruction)


État 54

   17 Instruction: LoopWHILE .

    $défaut  réduction par utilisation de la règle 17 (Instruction)


État 55

   18 Instruction: Print .

    $défaut  réduction par utilisation de la règle 18 (Instruction)


État 56

   19 Instruction: Return .

    $défaut  réduction par utilisation de la règle 19 (Instruction)


État 57

    7 ArgListNextNext: tCOMMA tINT tID . ArgListNextNext

    tCOMMA  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 75


État 58

    8 ArgListNextNext: tCOMMA Arith_Expr ArgListNextNext .

    $défaut  réduction par utilisation de la règle 8 (ArgListNextNext)


État 59

    1 Program: Function tVOID tMAIN tLPAR tVOID tRPAR Body .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 60

   59 Print: tPRINTF tLPAR . Expr tRPAR tSEMI

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 63
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Bool_Expr   aller à l'état 64
    Expr        aller à l'état 76


État 61

   51 Bool_Expr: tTRUE .

    $défaut  réduction par utilisation de la règle 51 (Bool_Expr)


État 62

   52 Bool_Expr: tFALSE .

    $défaut  réduction par utilisation de la règle 52 (Bool_Expr)


État 63

   39 Arith_Expr: Arith_Expr . tADD Factor
   40           | Arith_Expr . tSUB Factor
   53 Bool_Expr: Arith_Expr . tLT Arith_Expr
   54          | Arith_Expr . tGT Arith_Expr
   55          | Arith_Expr . tGE Arith_Expr
   56          | Arith_Expr . tLE Arith_Expr
   57          | Arith_Expr . tNE Arith_Expr
   58          | Arith_Expr . tEQ Arith_Expr
   61 Expr: Arith_Expr .

    tADD  décalage et aller à l'état 23
    tSUB  décalage et aller à l'état 24
    tEQ   décalage et aller à l'état 77
    tLT   décalage et aller à l'état 78
    tGT   décalage et aller à l'état 79
    tNE   décalage et aller à l'état 80
    tGE   décalage et aller à l'état 81
    tLE   décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 61 (Expr)


État 64

   62 Expr: Bool_Expr .

    $défaut  réduction par utilisation de la règle 62 (Expr)


État 65

   60 Return: tRETURN Expr . tSEMI

    tSEMI  décalage et aller à l'état 83


État 66

   37 LoopWHILE: tWHILE tLPAR . Condition tRPAR Body

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 84
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Condition   aller à l'état 85
    Bool_Expr   aller à l'état 86


État 67

   22 Dec: tID . tCOMMA DecNext
   23    | tID .
   24    | tID . tASSIGN Arith_Expr

    tCOMMA   décalage et aller à l'état 87
    tASSIGN  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 23 (Dec)


État 68

   21 Constantes: tCONST Dec . tSEMI

    tSEMI  décalage et aller à l'état 89


État 69

   26 DecNext: tID . tCOMMA DecNext
   27        | tID .
   28        | tID . tASSIGN Arith_Expr
   30        | tID . tASSIGN $@1 tID tLPAR ArgList tRPAR

    tCOMMA   décalage et aller à l'état 90
    tASSIGN  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 27 (DecNext)


État 70

   25 Declaration: tINT DecNext . tSEMI

    tSEMI  décalage et aller à l'état 92


État 71

   34 LoopIF: tIF tLPAR . Condition tRPAR $@2 Body $@3 IfNext

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 84
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Condition   aller à l'état 93
    Bool_Expr   aller à l'état 86


État 72

   31 Affectation: tID tASSIGN . Arith_Expr tSEMI

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 94
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 73

   10 Body: tLBRACE Content tRBRACE .

    $défaut  réduction par utilisation de la règle 10 (Body)


État 74

   11 Content: Instruction Content .

    $défaut  réduction par utilisation de la règle 11 (Content)


État 75

    7 ArgListNextNext: tCOMMA tINT tID ArgListNextNext .

    $défaut  réduction par utilisation de la règle 7 (ArgListNextNext)


État 76

   59 Print: tPRINTF tLPAR Expr . tRPAR tSEMI

    tRPAR  décalage et aller à l'état 95


État 77

   58 Bool_Expr: Arith_Expr tEQ . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 96
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 78

   53 Bool_Expr: Arith_Expr tLT . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 97
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 79

   54 Bool_Expr: Arith_Expr tGT . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 98
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 80

   57 Bool_Expr: Arith_Expr tNE . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 99
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 81

   55 Bool_Expr: Arith_Expr tGE . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 100
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 82

   56 Bool_Expr: Arith_Expr tLE . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 101
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 83

   60 Return: tRETURN Expr tSEMI .

    $défaut  réduction par utilisation de la règle 60 (Return)


État 84

   39 Arith_Expr: Arith_Expr . tADD Factor
   40           | Arith_Expr . tSUB Factor
   53 Bool_Expr: Arith_Expr . tLT Arith_Expr
   54          | Arith_Expr . tGT Arith_Expr
   55          | Arith_Expr . tGE Arith_Expr
   56          | Arith_Expr . tLE Arith_Expr
   57          | Arith_Expr . tNE Arith_Expr
   58          | Arith_Expr . tEQ Arith_Expr
